# stm-queue

./: .gitignore  .travis.yml  CHANGELOG.md  README.md  stm-queue.cabal
bench/: Bench.hs
src/Data/: Queue.hs
test/: Test.hs
