cabal-version:       >=1.10
name:                stm-queue
version:             0.1.0.0
license-file:        LICENSE
author:              Samuel Schlesinger
maintainer:          samuel@simspace.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Data.Queue
  other-extensions:    LambdaCase, BangPatterns
  build-depends:       base >=4.12, stm >=2.1
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite stm-queue-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  build-depends:       base >=4.12, stm >=2.1, stm-queue, hspec >=2.7.4, async >=2.0
  ghc-options:         -threaded -rtsopts "-with-rtsopts=-N -T"
